[package]
name = "backend"
version = "0.1.0"
authors = ["Christian Cavasin <christian.cavasin@9elements.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
dotenv = "0.14.1"
serde_json = "1.0"
diesel_migrations = "1.4.0"
rand = "0.7.2"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.diesel]
version = "1.4.3"
features = ["sqlite"]

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["diesel_sqlite_pool", "json", "serve"]

[dependencies.scrypt]
version = "0.2"
features = ["include_simple"]